# UPSKAYLEDD

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
apps/desktop/: README.md
config/: conversion_guidance.toml  defaults.toml  delivery_guidance.toml  desktop_copy.toml  desktop_stage_ui.toml  desktop_ui.toml  encode_profiles.toml  fallback_filters.toml  model_packs.toml  models.toml  profiles.toml  runtime_actions.toml  stage_presets.toml
packaging/: README.md  windows_branding.py
packaging/inno/: build_windows_installer.py  upskayledd-desktop.iss
packaging/pyinstaller/: build_windows_portable.py  upskayledd-desktop.spec  validate_windows_portable.py
src/upskayledd/: __init__.py  __main__.py  app_service.py  backend_manager.py  bootstrap.py  cli.py  config.py  delivery_guidance.py  desktop_entry.py  encode_mux.py  inspector.py  manifest_writer.py  media_metrics.py  model_registry.py  models.py  pipeline_builder.py  platform_validation_matrix.py  preview_engine.py  profile_resolver.py  project_store.py  queue_runner.py  runtime_guidance.py  support_bundle.py
tests/: __init__.py  workspace_temp.py
tests/integration/: __init__.py  test_cli_smoke.py  test_pyside_app_smoke.py
tests/unit/: __init__.py  test_app_service.py  test_backend_manager.py  test_config.py  test_context_checkpoint.py  test_delivery_guidance.py  test_desktop_ui_config.py  test_desktop_window_helpers.py  test_env_probe.py  test_inspector.py  (+13 more)
tools/: context_checkpoint.py  run_platform_validation_matrix.py  run_real_world_validation.py
(+21 files in other folders)
