[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upskayledd"
version = "0.1.0"
description = "Config-driven restoration orchestration for legacy video."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "UPSKAYLEDD Contributors" }
]
keywords = ["video", "restoration", "upscale", "vapoursynth", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]

[project.scripts]
upskayledd = "upskayledd.cli:main"
upskayledd-desktop = "upskayledd.desktop_entry:main"

[project.optional-dependencies]
desktop-build = [
  "pyinstaller==6.19.0",
  "pillow>=11.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
